--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,17 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
-    <Button
-            android:layout_width="wrap_content"
+    <Button android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/enable_notifications"
             android:id="@+id/enableNotificationsButton"
             android:layout_gravity="center_horizontal" />
+
+    <Button android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/test_notifications"
+            android:id="@+id/testNotificationsButton"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@+id/enableNotificationsButton"/>
 
 </RelativeLayout>
